# firestore_url_opener

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  main_sample.rs
terraform/: README.md  main.tf  variables.tf
terraform/modules/firestore/: firestore.rules  main.tf
