[package]
name = "firestore_listener"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13.5"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tonic = "0.12.3"
webbrowser = "1.0.4"
url = "2.5.0"
percent-encoding = "2.3.1"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
temp-env = "0.3.6"

[dev-dependencies]
temp-env = "0.3.6"
