[package]
name = "firestore_url_opener"
version = "0.1.0"
edition = "2024"

[dependencies]
firestore = { version = "0.44.1" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
webbrowser = "1.0.4"
url = "2.5.0"
percent-encoding = "2.3.1"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
